--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,6 +49,14 @@ button {
   cursor: pointer;
 }
 
+.font-size-16-18 {
+  font-size: 16px;
+
+  @media (min-width: 1300px) {
+    font-size: 18px;
+  }
+}
+
 .contact-icon {
   width: 40px;
   height: 40px;
